--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mongoose": "^5.12.2",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   }
 }
